tests/snapshots/end_to_end__09_more_nested_function_calls-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
add__0:

add__0_0:
  pushq %rbp
  movq %rsp, %rbp
  subq $16, %rsp
  pushq %r12
  pushq %r13
  pushq %r14
  pushq %r15
  pushq %rbx
  movq %rdi, -8(%rbp)
  movq %rsi, -16(%rbp)
  movq -8(%rbp), %r10
  movq %r10, %r11
  movq -16(%rbp), %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %rax
  popq %rbx
  popq %r15
  popq %r14
  popq %r13
  popq %r12
  addq $16, %rsp
  popq %rbp
  retq

.globl venice_main
venice_main:

venice_main_1:
  pushq %rbp
  movq %rsp, %rbp
  subq $0, %rsp
  pushq %r12
  pushq %r13
  pushq %r14
  pushq %r15
  pushq %rbx
  movq $35, %r10
  movq %r10, %rdi
  movq $1, %r10
  movq %r10, %rsi
  pushq %r10
  pushq %r11
  subq $8, %rsp
  call add__0
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, %rdi
  movq $3, %r10
  movq %r10, %rsi
  pushq %r10
  pushq %r11
  subq $8, %rsp
  call add__0
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, %rdi
  movq $2, %r10
  movq %r10, %rsi
  pushq %r10
  pushq %r11
  subq $8, %rsp
  call add__0
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, %rdi
  movq $1, %r10
  movq %r10, %rsi
  pushq %r10
  pushq %r11
  subq $8, %rsp
  call add__0
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, %rdi
  pushq %r10
  pushq %r11
  subq $8, %rsp
  call venice_printint
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq $0, %r10
  movq %r10, %rax
  popq %rbx
  popq %r15
  popq %r14
  popq %r13
  popq %r12
  addq $0, %rsp
  popq %rbp
  retq


