tests/snapshots/end_to_end__13_argv-stdout.snap
---
source: tests/end_to_end.rs
expression: stdout
---
# of args: 4
Arg: tests/13_argv/program
Arg: a
Arg: b
Arg: c

