tests/snapshots/end_to_end__17_register_overflow_2-vil.snap
---
source: tests/end_to_end.rs
expression: vil_output
---
extern venice_string_new;
extern venice_print;
extern venice_printint;



func venice_main {
  // stack_frame_size = 24

venice_main_0:
  R0 = set s_0
  store R0, -8
  R0 = call venice_string_new, mem[-8]
  store R0, -16
  R0 = call venice_print, mem[-16]
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = move R3
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = add R4, R3
  R5 = move R4
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = move R3
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = add R4, R3
  R5 = add R5, R4
  R6 = move R5
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = move R3
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = add R4, R3
  R5 = move R4
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = move R3
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = add R4, R3
  R5 = add R5, R4
  R6 = add R6, R5
  R7 = move R6
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = move R3
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = add R4, R3
  R5 = move R4
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = move R3
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = add R4, R3
  R5 = add R5, R4
  R6 = move R5
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = move R3
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = add R4, R3
  R5 = move R4
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = move R3
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = move R2
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = move R1
  R0 = set 1
  R1 = move R0
  R0 = set 1
  R1 = add R1, R0
  R2 = add R2, R1
  R3 = add R3, R2
  R4 = add R4, R3
  R5 = add R5, R4
  R6 = add R6, R5
  R0 = set 86
  R6 = sub R6, R0
  R7 = add R7, R6
  store R7, -24
  R7 = call venice_printint, mem[-24]
  R0 = set 0
  R13 = move R0
  jump venice_main_return_1

venice_main_return_1:
}


data s_0 = "Should be 42: ";

