tests/snapshots/end_to_end__17_register_overflow_2-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
.globl venice_main
venice_main:
  pushq %rbp
  movq %rsp, %rbp
  subq $24, %rsp
  pushq %r12
  pushq %r13
  pushq %r14
  pushq %r15
  pushq %rbx

venice_main_0:
  movq $.s_0, %r10
  movq %r10, -8(%rbp)
  pushq %r10
  pushq %r11
  movq -8(%rbp), %rdi
  call venice_string_new
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, -16(%rbp)
  pushq %r10
  pushq %r11
  movq -16(%rbp), %rdi
  call venice_print
  popq %r11
  popq %r10
  movq %rax, %r10
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  movq %r13, %r14
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  addq %r13, %r14
  movq %r14, %r14
  movq %r14, %r15
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  movq %r13, %r14
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  addq %r13, %r14
  movq %r14, %r14
  addq %r14, %r15
  movq %r15, %r15
  movq %r15, %rbx
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  movq %r13, %r14
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  addq %r13, %r14
  movq %r14, %r14
  movq %r14, %r15
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  movq %r13, %r14
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  addq %r13, %r14
  movq %r14, %r14
  addq %r14, %r15
  movq %r15, %r15
  addq %r15, %rbx
  movq %rbx, %rbx
  movq %rbx, %rdi
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  movq %r13, %r14
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  addq %r13, %r14
  movq %r14, %r14
  movq %r14, %r15
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  movq %r13, %r14
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  addq %r13, %r14
  movq %r14, %r14
  addq %r14, %r15
  movq %r15, %r15
  movq %r15, %rbx
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  movq %r13, %r14
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  addq %r13, %r14
  movq %r14, %r14
  movq %r14, %r15
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  movq %r13, %r14
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  movq %r12, %r13
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  movq %r11, %r12
  movq $1, %r10
  movq %r10, %r11
  movq $1, %r10
  addq %r10, %r11
  movq %r11, %r11
  addq %r11, %r12
  movq %r12, %r12
  addq %r12, %r13
  movq %r13, %r13
  addq %r13, %r14
  movq %r14, %r14
  addq %r14, %r15
  movq %r15, %r15
  addq %r15, %rbx
  movq %rbx, %rbx
  movq $86, %r10
  subq %r10, %rbx
  movq %rbx, %rbx
  addq %rbx, %rdi
  movq %rdi, %rdi
  movq %rdi, -24(%rbp)
  pushq %r10
  pushq %r11
  movq -24(%rbp), %rdi
  call venice_printint
  popq %r11
  popq %r10
  movq %rax, %rdi
  movq $0, %r10
  movq %r10, %rax
  jmp venice_main_return_1

venice_main_return_1:
  popq %rbx
  popq %r15
  popq %r14
  popq %r13
  popq %r12
  addq $24, %rsp
  popq %rbp
  retq

.s_0:
  .string "Should be 42: "

