tests/snapshots/end_to_end__error_00_bad_addition-compiler-stdout.snap
---
source: tests/end_to_end.rs
expression: stdout
---
error: expected i64, got string (line 2, column 17 of tests/error_00_bad_addition.vn)

