tests/snapshots/end_to_end__error_01_bad_printint-compiler-stdout.snap
---
source: tests/end_to_end.rs
expression: stdout
---
error: expected i64, got string (line 2, column 12 of tests/error_01_bad_printint.vn)

