tests/snapshots/end_to_end__error_02_too_many_arguments-compiler-stdout.snap
---
source: tests/end_to_end.rs
expression: stdout
---
error: expected 2 parameter(s), got 3 (line 6, column 15 of tests/error_02_too_many_arguments.vn)

