tests/snapshots/end_to_end__error_03_too_few_arguments-compiler-stdout.snap
---
source: tests/end_to_end.rs
expression: stdout
---
error: expected 2 parameter(s), got 1 (line 6, column 15 of tests/error_03_too_few_arguments.vn)

