tests/snapshots/end_to_end__error_04_bad_parameter-compiler-stdout.snap
---
source: tests/end_to_end.rs
expression: stdout
---
error: expected i64, got string (line 6, column 19 of tests/error_04_bad_parameter.vn)

