tests/snapshots/end_to_end__error_05_undefined_symbol-compiler-stdout.snap
---
source: tests/end_to_end.rs
expression: stdout
---
error: unknown symbol (line 2, column 12 of tests/error_05_undefined_symbol.vn)

